@@ -6,34 +6,203 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <time.h>
+#include <string.h>
+#include <libgen.h>
+#include <endian.h>
 
 #include "main.h"
 
 int main(int argc, char* argv[]) {
+    printf("path %s\n", dungeonFileName());
+
+    gridCell_t** dungeonGrid;
+    room_t* rooms;
     int roomCount;
-    unsigned int seed = (unsigned int)time(NULL); //1453848819;
+    // parse arguments
+    int save = 0;
+    int load = 0;
+    if (argc == 2) {
+        if (strcmp(argv[1], "--save") == 0) {
+            save = 1;
+        } else if (strcmp(argv[1], "--load") == 0) {
+            load = 1;
+        } else {
+            showUsage(argv[0]);
+            return 0;
+        }
+    } else if (argc > 1) {
+        showUsage(argv[0]);
+        return 0;
+    }
+
+    if (load) {
+        int errLevel = loadDungeon(&dungeonGrid, &roomCount, &rooms, dungeonFileName());
+        if (errLevel) {
+            printf("Failed to load the dungeon.\n");
+            return -1;
+        }
+        populateRooms(dungeonGrid, rooms, roomCount);
+    } else {
+        roomCount = generateDungeon(&dungeonGrid, &rooms);
+        if (roomCount < 0) {
+            printf("Failed to allocate memory for the dungeon grid.\n");
+            return roomCount;
+        }
+    }
+
+    printRooms(roomCount, rooms);
+    printGrid(dungeonGrid);
+
+    // Clean up
+    free2DGrid(dungeonGrid, HEIGHT);
+    free(rooms);
+    return 0;
+}
+
+int loadDungeon(gridCell_t*** gridPtr, int* roomCount, room_t** roomsPtr, char* fileName) {
+    size_t bytesRead;
+    char magicBytes[6];
+    uint32_t version;
+    uint32_t dataLen;
+    // malloc2DGrid could fail.  Should be checked.
+    malloc2DGrid(gridPtr, WIDTH, HEIGHT);
+    gridCell_t** grid = *gridPtr;
+
+    FILE* file = fopen(fileName, "r");
+    if (file == NULL) {
+        // error opening file
+        return -1;
+    }
+
+    // read magic bytes
+    bytesRead = fread(magicBytes, sizeof(char), 6, file);
+    if (bytesRead < 6) {
+        // error reading magic bytes
+        return -2;
+    }
+    if (strncmp("RLG327", magicBytes, 6) != 0) {
+        // invalid magic bytes
+        return -3;
+    }
+
+    // read version
+    bytesRead = fread(&version, sizeof(version), 1, file);
+    if (bytesRead != 1) {
+        // Error reading version
+        return -4;
+    }
+    if (version != 0) {
+        // file version is newer than this program's version
+        return -5;
+    }
+    version = be32toh(version);
+
+    // read data length
+    bytesRead = fread(&dataLen, sizeof(dataLen), 1, file);
+    if (bytesRead != 1) {
+        // error reading data len
+        return -6;
+    }
+    dataLen = be32toh(dataLen);
+    if (dataLen < 1482) {
+        // data is too short for the grid
+        return -7;
+    }
+
+    // place the solid border
+    for (int x = 0; x < WIDTH; x++) {
+        grid[0][x].hardness = 255;
+        grid[0][x].material = rock;
+        grid[HEIGHT - 1][x].hardness = 255;
+        grid[HEIGHT - 1][x].material = rock;
+    }
+    for (int y = 0; y < HEIGHT; y++) {
+        grid[y][0].hardness = 255;
+        grid[y][0].material = rock;
+        grid[y][WIDTH - 1].hardness = 255;
+        grid[y][WIDTH - 1].material = rock;
+    }
+
+    // read the hardness grid
+    for (int y = 0; y < HEIGHT - 2; y++) {
+        for (int x = 0; x < WIDTH - 2; x++) {
+            bytesRead = fread(&grid[y + 1][x + 1].hardness, sizeof(grid[y + 1][x + 1].hardness), 1, file);
+            if (bytesRead != 1) {
+                // error reading hardness data
+                return -8;
+            }
+            if (grid[y + 1][x + 1].hardness == 0) {
+                // The cell is a corridor or a room.  For now it will be a corridor.
+                grid[y + 1][x + 1].material = corridor;
+            } else {
+                grid[y + 1][x + 1].material = rock;
+            }
+        }
+    }
+
+    dataLen -= (HEIGHT - 2) * (WIDTH - 2) + 14;
+    if (dataLen % 4 != 0) {
+        // invalid data length for rooms
+        return -9;
+    }
+
+    *roomCount = dataLen / 4;
+    *roomsPtr = malloc(sizeof(room_t) * *roomCount);
+    room_t* rooms = *roomsPtr;
+    for (int r = 0; r < *roomCount; r++) {
+        bytesRead = fread(&rooms[r], sizeof(room_t), 1, file);
+        if (bytesRead != 1) {
+            // failure reading a room
+            return -10;
+        }
+    }
+    return 0;
+}
+
+int generateDungeon(gridCell_t*** gridPtr, room_t** roomsPtr) {
+    int roomCount;
+    unsigned int seed;
+    seed = (unsigned int)time(NULL); //1453848819;
     srand(seed);
     printf("Seed: %d\n", seed);
 
     roomCount = MIN_ROOMS + (rand() % (MAX_ROOMS - MIN_ROOMS + 1));
     printf("Room count: %d\n", roomCount);
 
-    room_t rooms[roomCount];
-
-    for (int i = 0; i < roomCount; i++) {
-        generateRoom(&rooms[i], rooms, i);
+    if (!(*roomsPtr = malloc(sizeof(room_t) * roomCount))) {
+        return -1;
     }
 
+    for (int i = 0; i < roomCount; i++) {
+        generateRoom(&(*roomsPtr)[i], *roomsPtr, i);
+    }
+
+    *gridPtr = populateGrid(*roomsPtr, roomCount);
+    connectRooms(*gridPtr, *roomsPtr, roomCount);
+    return roomCount;
+}
+
+void showUsage(char* name) {
+    printf("Usage: %s [--save|--load]\n\n", basename(name));
+    printf("\t--save\tSaves a randomly generated dungeon to ~/.rlg327/dungeon\n");
+    printf("\t--load\tLoads ~/.rgl327/dungeon and displays it\n");
+}
+
+char* dungeonFileName() {
+    char* fullPath;
+    char* homeDir;
+    char* relativePath = "/.rlg327/dungeon";
+
+    homeDir = getenv("HOME");
+    fullPath = malloc(sizeof(char) * (strlen(homeDir) + strlen(relativePath) + 1));
+    sprintf(fullPath, "%s/.rlg327/dungeon", homeDir);
+    return fullPath;
+}
+
+void printRooms(int roomCount, room_t* rooms) {
     for (int i = 0; i < roomCount; i++) {
         printf("rooms[%d]: (%d, %d) (%dx%d)\n", i, rooms[i].x, rooms[i].y, rooms[i].width, rooms[i].height);
     }
-
-    gridCell_t** dungeonGrid = populateGrid(rooms, roomCount);
-    connectRooms(dungeonGrid, rooms, roomCount);
-    printGrid(dungeonGrid);
-    free2DGrid(dungeonGrid, HEIGHT);
-
-    return 0;
 }
 
 int roomDist(room_t room1, room_t room2) {
@@ -93,7 +262,7 @@ void connectTwoRooms(gridCell_t **grid, room_t room1, room_t room2) {
         }
         if (grid[curY][curX].material == rock) {
             grid[curY][curX].material = corridor;
-            grid[curY][curX].hardness = -1;
+            grid[curY][curX].hardness = 0;
         }
     } while (desiredDir != nowhere);
 }
@@ -117,10 +286,10 @@ int generateRoom(room_t* generatedRoom, room_t* rooms, int roomCount) {
     int generationTry = 0;
     room_t room;
     do {
-        room.x = 1 + rand() % (WIDTH - 2); // 2 for the immutable border
-        room.y = 1 + rand() % (HEIGHT - 2);
-        room.width = ROOM_WIDTH_MIN + rand() % (ROOM_WIDTH_MAX - ROOM_WIDTH_MIN);
-        room.height = ROOM_HEIGHT_MIN + rand() % (ROOM_HEIGHT_MAX - ROOM_HEIGHT_MIN);
+        room.x = (uint8_t)(1 + rand() % (WIDTH - 2)); // 2 for the immutable border
+        room.y = (uint8_t)(1 + rand() % (HEIGHT - 2));
+        room.width = (uint8_t)(ROOM_WIDTH_MIN + rand() % (ROOM_WIDTH_MAX - ROOM_WIDTH_MIN));
+        room.height = (uint8_t)(ROOM_HEIGHT_MIN + rand() % (ROOM_HEIGHT_MAX - ROOM_HEIGHT_MIN));
         if (generationTry++ >= 3000) {
             return -1;
         }
@@ -131,7 +300,7 @@ int generateRoom(room_t* generatedRoom, room_t* rooms, int roomCount) {
 
 int validateRoom(room_t* rooms, int roomCount, room_t room) {
     if (room.x + room.width > WIDTH - 1 ||
-            room.y + room.height > HEIGHT - 1) {
+        room.y + room.height > HEIGHT - 1) {
         return -1;
     }
     for (int i = 0; i < roomCount; i++) {
@@ -145,16 +314,16 @@ int validateRoom(room_t* rooms, int roomCount, room_t room) {
 int validateTwoRooms(room_t room1, room_t room2) {
     room_t boundingRoom1;
 
-    boundingRoom1.x = room1.x - 1;
-    boundingRoom1.y = room1.y - 1;
-    boundingRoom1.height = room1.height + 2;
-    boundingRoom1.width = room1.width + 2;
+    boundingRoom1.x = (uint8_t)(room1.x - 1);
+    boundingRoom1.y = (uint8_t)(room1.y - 1);
+    boundingRoom1.height = (uint8_t)(room1.height + 2);
+    boundingRoom1.width = (uint8_t)(room1.width + 2);
 
     // Check that room2 is outside of room1 in each direction.
     if (room2.y + room2.height < boundingRoom1.y || // above
-            room2.y > boundingRoom1.y + boundingRoom1.height || // below
-            room2.x + room2.width < boundingRoom1.x || // left
-            room2.x > boundingRoom1.x + boundingRoom1.width /* right */) {
+        room2.y > boundingRoom1.y + boundingRoom1.height || // below
+        room2.x + room2.width < boundingRoom1.x || // left
+        room2.x > boundingRoom1.x + boundingRoom1.width /* right */) {
         return 0;
     }
     return -1;
@@ -178,7 +347,7 @@ gridCell_t** populateGrid(room_t* rooms, int roomCount) {
     for (int y = 0; y < HEIGHT; y++) {
         for (int x = 0; x < WIDTH; x++) {
             grid[y][x].material = rock;
-            grid[y][x].hardness = rand() % ROCK_HARDNESS_MAX;
+            grid[y][x].hardness = (uint8_t)(rand() % (ROCK_HARDNESS_MAX - 1) + 1);
         }
     }
     populateRooms(grid, rooms, roomCount);
@@ -193,7 +362,7 @@ void populateRooms(gridCell_t** grid, room_t* rooms, int roomCount) {
                 x = rooms[i].x + xOffset;
                 y = rooms[i].y + yOffset;
                 grid[y][x].material = room;
-                grid[y][x].hardness = -1;
+                grid[y][x].hardness = 0;
             }
         }
     }
