@@ -1,2 +1,5 @@
 2016-02-01
+Got dungeon loading working!
+
+2016-02-01
 Set up workspace and imported code from project 1.01
